package com.cme.vendingmachine.model;

/**
 * @author hantruong
 */
public interface Payment {
    int getValue();
    String getName();
}
